--- a/index.html
+++ b/index.html
@@ -43,7 +43,20 @@
 					<div class="panel-body">
 						<ul class="list-unstyled">
 							<li>
-								- Hi Hi Hi Hi.
+								Once upon a time, Far away, above in the air, there was a magical world where Dayra ("circle" in Arabic) lived bouncing on her air trampolines. But that is about to change, as the squares have decided to invade this magical world and bounce on Dayra trampolines too. <br> <br> 
+
+								Dayra asked herself "My trampoliiiiiiiiiiiiiiiines, what I will do now ?". Dayra decided that squares shall not bounce here. <br> <br> 
+
+								Help Dayra throw the squares out of the trampolines. 
+							</li>
+							<li>
+								- Use the 'Arrow Right' and 'Arrow left' buttons to move Dayra right and left
+							</li>
+							<li>
+								- Take care that you don't fall out of the trampolines
+							</li>
+							<li>
+								- Throw the squares by pushing them out of the trampolines
 							</li>
 						</ul>
 					</div>
